--- a/src/meta.tex
+++ b/src/meta.tex
@@ -8,6 +8,7 @@
 \usepackage[british]{babel}
 \usepackage{fontspec}
 \usepackage{mathtools}
+\usepackage{listings}
 \usepackage[math-style=french,bold-style=upright, nabla=upright,warnings-off={mathtools-colon}]{unicode-math}%
 \usepackage{soul}
 \usepackage{extramath}
