--- a/src/meta.tex
+++ b/src/meta.tex
@@ -69,7 +69,7 @@
 {
     %\inst{1}%
      \emph{Irish Centre for High-End Computing}    
-  }
+}
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
@@ -361,6 +361,8 @@
 %   just say so once. Everybody will be happy with that.
 \section{Definitions}
 \input{definitions}
+\section{Macros}
+\input{macros}
 \section{Status}
 \subsection{Time 0}
 \input{time0}
@@ -372,6 +374,8 @@
   \tableofcontents[currentsection]
 \end{frame}
 \input{challenges}
+\section{References}
+\input{references}
 \section*{Questions}
 \begin{frame}{Q\&A}
  \begin{center}
