--- a/src/definitions.tex
+++ b/src/definitions.tex
@@ -3,7 +3,7 @@
 \item Writing programs that generate or manipulate programs as their data.
 \item A program that manipulates code.
 \item Code-generating programs are sometimes called meta-programs; writing such programs
-    is called meta-programming.
+    is called meta-programming \cite{AbrahamsAndGurtovoy04}.
 \end{itemize}
 \end{frame}
 
