adding section for C++ template metaprogramming

--- a/src/meta.tex
+++ b/src/meta.tex
@@ -363,6 +363,8 @@
 \input{definitions}
 \section{Macros}
 \input{macros}
+\section{C++ Template meta-programming}
+\input{cppmeta}
 \section{Status}
 \subsection{Time 0}
 \input{time0}
