--- a/src/meta.tex
+++ b/src/meta.tex
@@ -360,10 +360,22 @@
 % - If you omit details that are vital to the proof/implementation,
 %   just say so once. Everybody will be happy with that.
 \section{Definitions}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
 \input{definitions}
 \section{Macros}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
 \input{macros}
 \section{C++ Template meta-programming}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
 \input{cppmeta}
 \section{Status}
 \subsection{Time 0}
