adding more slides and sections

--- a/src/meta.tex
+++ b/src/meta.tex
@@ -365,18 +365,35 @@
     \tableofcontents[currentsection]
 \end{frame}
 \input{definitions}
+
 \section{Macros}
 \begin{frame}<beamer>                                                                                                                    
     \frametitle{Outline}
     \tableofcontents[currentsection]
 \end{frame}
 \input{macros}
+
 \section{C++ Template meta-programming}
 \begin{frame}<beamer>                                                                                                                    
     \frametitle{Outline}
     \tableofcontents[currentsection]
 \end{frame}
 \input{cppmeta}
+
+\section{Design Patterns}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
+\input{cppdesign}
+
+\section{Expression Templates:}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
+\input{cppexp}
+
 \section{Status}
 \subsection{Time 0}
 \input{time0}
