--- a/src/meta.tex
+++ b/src/meta.tex
@@ -387,6 +387,20 @@
 \end{frame}
 \input{cppdesign}
 
+\section{Erasing virtual methods}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
+\input{crtp}
+
+\section{Gilles example}
+\begin{frame}<beamer>                                                                                                                    
+    \frametitle{Outline}
+    \tableofcontents[currentsection]
+\end{frame}
+\input{gilles}
+
 \section{Expression Templates:}
 \begin{frame}<beamer>                                                                                                                    
     \frametitle{Outline}
