--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -1,5 +1,18 @@
-\begin{frame}{Erasing virtual methods} 
+\begin{frame}[Generate]{Erasing virtual methods, CRTP} 
 \begin{itemize}
-\item .
+\item Curiously Recurring Template Pattern.
 \end{itemize}
 \end{frame}
+
+\begin{frame}[fragile]{CRTP}
+\inputminted[mathescape,
+           linenos,
+           numbersep=5pt,
+           frame=lines,
+           bgcolor=White,
+           fontsize=\scriptsize,
+           linenos,
+           framesep=2mm]{c++}
+           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine.cpp} 
+\end{frame}
+
