--- a/src/meta.tex
+++ b/src/meta.tex
@@ -388,10 +388,9 @@
 \input{cppdesign}
 
 \section{Erasing virtual methods}
-\begin{frame}<beamer>                                                                                                                    
-    \frametitle{Outline}
-    \tableofcontents[currentsection]
-\end{frame}
+\subsection{naive}
+\input{naive}
+\subsection{crtp}
 \input{crtp}
 
 \section{Gilles example}
@@ -413,11 +412,15 @@
 \input{time0}
 \subsection{Current}
 \input{current.tex}
+
+
 \section{Challenges}
 \begin{frame}<beamer>
  \frametitle{Outline}
   \tableofcontents[currentsection]
 \end{frame}
+
+
 \input{challenges}
 \section{References}
 \input{references}
