--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -4,7 +4,19 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}[fragile]{CRTP}
+\begin{frame}[fragile]{CRTP, run time polymorphism}
+\inputminted[mathescape,
+           linenos,
+           numbersep=5pt,
+           frame=lines,
+           bgcolor=White,
+           fontsize=\tiny,
+           linenos,
+           framesep=2mm]{c++}
+           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_1.cpp} 
+\end{frame}
+
+\begin{frame}[fragile]{CRTP, run time polymorphism}
 \inputminted[mathescape,
            linenos,
            numbersep=5pt,
@@ -13,6 +25,7 @@
            fontsize=\scriptsize,
            linenos,
            framesep=2mm]{c++}
-           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine.cpp} 
+           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_2.cpp} 
 \end{frame}
+
 
