--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -28,4 +28,41 @@
            {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_2.cpp} 
 \end{frame}
 
+\begin{frame}[fragile]{CRTP, compile time polymorphism}
+\inputminted[mathescape,
+           linenos,
+           numbersep=5pt,
+           frame=lines,
+           bgcolor=White,
+           fontsize=\tiny,
+           linenos,
+           framesep=2mm]{c++}
+           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_1.cpp} 
+\end{frame}
+
+\begin{frame}[fragile]{CRTP, compile time polymorphism}
+\inputminted[mathescape,
+           linenos,
+           numbersep=5pt,
+           frame=lines,
+           bgcolor=White,
+           fontsize=\scriptsize,
+           linenos,
+           framesep=2mm]{c++}
+           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_2.cpp} 
+\end{frame}
+
+\begin{frame}[fragile]{CRTP, compile time polymorphism}
+\inputminted[mathescape,
+           linenos,
+           numbersep=5pt,
+           frame=lines,
+           bgcolor=White,
+           fontsize=\scriptsize,
+           linenos,
+           framesep=2mm]{c++}
+           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_3.cpp} 
+\end{frame}
+
+
 
