adding more references

--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -1,6 +1,7 @@
 \begin{frame}[Generate]{Erasing virtual methods, CRTP} 
 \begin{itemize}
 \item Curiously Recurring Template Pattern.
+\item \cite{eli}
 \end{itemize}
 \end{frame}
 
