--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -66,4 +66,27 @@
 \end{frame}
 
 
+\begin{frame}[fragile]{CRTP, compile time polymorphism}
+    \includegraphics[scale=0.3]{/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/crt.png}
+\end{frame}
+
+\begin{frame}[fragile]{Logical CPU balance}
+\vspace{20mm}
+\begin{figure}
+\begin{tikzpicture}[font=\footnotesize,xshift=-25mm,yshift=-17mm]
+\begin{axis}[
+scale only axis,
+xmin=  1,xmax=240,
+minor tick num =4,
+every tick/.style={thick},
+xlabel=hw threads, ylabel=time/s,
+width=0.55\textwidth,
+]
+\addplot +[blue,thick] table[x index=0, y index=  1] {figures/vtune.dat};
+\end{axis}
+\end{tikzpicture}
+\end{figure}
+\vspace{20mm}
+\par{15 MPI processes each 4 threads running on Xeon Phi}
+\end{frame}
 
