--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -76,8 +76,9 @@
 \begin{tikzpicture}[font=\footnotesize,xshift=-25mm,yshift=-17mm]
 \begin{axis}[
 ybar,
+xtick=data,
 scale only axis,
-xmin=  1,xmax=3,
+xticklabels={A, B},
 minor tick num =4,
 every tick/.style={thick},
 ylabel=seconds,
