--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -78,8 +78,7 @@
 ybar,
 xtick=data,
 scale only axis,
-xticklabels={A, B},
-minor tick num =4,
+xticklabels={run time, compile time},
 every tick/.style={thick},
 ylabel=seconds,
 width=0.55\textwidth,
