removing plot from file image

--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -66,10 +66,6 @@
 \end{frame}
 
 
-\begin{frame}[fragile]{CRTP, compile time polymorphism}
-    \includegraphics[scale=0.3]{/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/crt.png}
-\end{frame}
-
 \begin{frame}[fragile]{Logical CPU balance}
 \vspace{20mm}
 \begin{figure}
@@ -83,7 +79,7 @@ every tick/.style={thick},
 ylabel=seconds,
 width=0.55\textwidth,
 ]
-\addplot +[blue,thick] table[x index=0, y index=  1] {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/vtune.dat};
+\addplot +[orange,thick] table[x index=0, y index=  1] {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/vtune.dat};
 \end{axis}
 \end{tikzpicture}
 \end{figure}
