--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -66,7 +66,7 @@
 \end{frame}
 
 
-\begin{frame}[fragile]{Logical CPU balance}
+\begin{frame}[fragile]{Compile time vs Run time}
 \vspace{20mm}
 \begin{figure}
 \begin{tikzpicture}[font=\footnotesize,xshift=-25mm,yshift=-17mm]
