--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -67,23 +67,33 @@
 
 
 \begin{frame}[fragile]{Compile time vs Run time}
-\vspace{20mm}
-\begin{figure}
-\begin{tikzpicture}[font=\footnotesize,xshift=-25mm,yshift=-17mm]
-\begin{axis}[
-ybar,
-xtick=data,
-scale only axis,
-xticklabels={run time, compile time},
-every tick/.style={thick},
-ylabel=seconds,
-width=0.55\textwidth,
-]
-\addplot +[orange,thick] table[x index=0, y index=  1] {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/vtune.dat};
-\end{axis}
-\end{tikzpicture}
-\end{figure}
-\vspace{20mm}
-\par{}
+    \begin{columns}[T] % contents are top vertically aligned
+        \begin{column}[T]{5cm} % each column can also be its own environment
+            \begin{itemize}
+            \item ~15x faster.
+            \end{itemize}
+        \end{column}
+
+        \begin{column}[T]{5cm} % alternative top-align that's better for graphics
+            \vspace{20mm}
+            \begin{figure}
+                \begin{tikzpicture}[font=\footnotesize,xshift=-25mm,yshift=-17mm]
+                    \begin{axis}[
+                            ybar,
+                            xtick=data,
+                            scale only axis,
+                            xticklabels={run time, compile time},
+                            every tick/.style={thick},
+                            ylabel=seconds,
+                            width=0.55\textwidth,
+                        ]
+                        \addplot +[orange,thick] table[x index=0, y index=  1] {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/figures/vtune.dat};
+                    \end{axis}
+                \end{tikzpicture}
+            \end{figure}
+            \vspace{20mm}
+            \par{}
+        \end{column}
+    \end{columns}
 \end{frame}
 
