--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -6,27 +6,31 @@
 \end{frame}
 
 \begin{frame}[fragile]{CRTP, run time polymorphism}
-\inputminted[mathescape,
-           linenos,
-           numbersep=5pt,
-           frame=lines,
-           bgcolor=White,
-           fontsize=\tiny,
-           linenos,
-           framesep=2mm]{c++}
-           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_1.cpp} 
-\end{frame}
+    \begin{columns}[T]
+        \begin{column}[T]{5cm}
+            \inputminted[mathescape,
+                linenos,
+                numbersep=5pt,
+                frame=lines,
+                bgcolor=White,
+                fontsize=\tiny,
+                linenos,
+                framesep=2mm]{c++}
+                {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_1.cpp} 
+        \end{column}
 
-\begin{frame}[fragile]{CRTP, run time polymorphism}
-\inputminted[mathescape,
-           linenos,
-           numbersep=5pt,
-           frame=lines,
-           bgcolor=White,
-           fontsize=\scriptsize,
-           linenos,
-           framesep=2mm]{c++}
-           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_2.cpp} 
+        \begin{column}[T]{5cm}    
+            \inputminted[mathescape,
+                       linenos,
+                       numbersep=5pt,
+                       frame=lines,
+                       bgcolor=White,
+                       fontsize=\tiny,
+                       linenos,
+                       framesep=2mm]{c++}
+                       {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/run_complex_pol_mine_2.cpp} 
+        \end{column}
+    \end{columns}
 \end{frame}
 
 \begin{frame}[fragile]{CRTP, compile time polymorphism}
