--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -34,15 +34,30 @@
 \end{frame}
 
 \begin{frame}[fragile]{CRTP, compile time polymorphism}
-\inputminted[mathescape,
-           linenos,
-           numbersep=5pt,
-           frame=lines,
-           bgcolor=White,
-           fontsize=\tiny,
-           linenos,
-           framesep=2mm]{c++}
-           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_1.cpp} 
+    \begin{columns}[T]
+        \begin{column}[T]{5cm}
+            \inputminted[mathescape,
+                       linenos,
+                       numbersep=5pt,
+                       frame=lines,
+                       bgcolor=White,
+                       fontsize=\tiny,
+                       linenos,
+                       framesep=2mm]{c++}
+                       {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_1.cpp} 
+        \end{column}
+        \begin{column}[T]{5cm}
+            \inputminted[mathescape,
+                   linenos,
+                   numbersep=5pt,
+                   frame=lines,
+                   bgcolor=White,
+                   fontsize=\tiny,
+                   linenos,
+                   framesep=2mm]{c++}
+                   {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_2.cpp}
+        \end{column}
+    \end{columns}
 \end{frame}
 
 \begin{frame}[fragile]{CRTP, compile time polymorphism}
