--- a/src/crtp.tex
+++ b/src/crtp.tex
@@ -56,34 +56,19 @@
                    linenos,
                    framesep=2mm]{c++}
                    {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_2.cpp}
+
+            \inputminted[mathescape,
+                       linenos,
+                       numbersep=5pt,
+                       frame=lines,
+                       bgcolor=White,
+                       fontsize=\tiny,
+                       linenos,
+                       framesep=2mm]{c++}
+                       {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_3.cpp} 
         \end{column}
     \end{columns}
 \end{frame}
-
-\begin{frame}[fragile]{CRTP, compile time polymorphism}
-\inputminted[mathescape,
-           linenos,
-           numbersep=5pt,
-           frame=lines,
-           bgcolor=White,
-           fontsize=\scriptsize,
-           linenos,
-           framesep=2mm]{c++}
-           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_2.cpp} 
-\end{frame}
-
-\begin{frame}[fragile]{CRTP, compile time polymorphism}
-\inputminted[mathescape,
-           linenos,
-           numbersep=5pt,
-           frame=lines,
-           bgcolor=White,
-           fontsize=\scriptsize,
-           linenos,
-           framesep=2mm]{c++}
-           {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/comp_complex_pol_mine_3.cpp} 
-\end{frame}
-
 
 \begin{frame}[fragile]{Compile time vs Run time}
     \begin{columns}[T] % contents are top vertically aligned
