adding section for virtual tables

--- a/src/meta.tex
+++ b/src/meta.tex
@@ -388,6 +388,8 @@
 \input{cppdesign}
 
 \section{Erasing virtual methods}
+\subsection{Virtual Tables}
+\input{vtbl}
 \subsection{naive}
 \input{naive}
 \subsection{crtp}
