--- a/src/vtbl.tex
+++ b/src/vtbl.tex
@@ -1,10 +1,32 @@
-\begin{frame}{Virtual Tables} 
+\begin{frame}{Virtual Tables 1} 
     \begin{itemize}
-        \item Support dynamic dispatching(run-time method binding).
+        \item Support dynamic dispatching(run-time method binding). (C++, D and C\#)
         \item When a virtual method it is defined, the compiler adds a hidden member variable to the class that defines this virtual method.
         \item This hidden member variable points to a \emph{Virtual Method Table(VTable)}, this is usually an array of pointers.
-        \item At run time these pointers will be set to point to the right function. 
+        \item At run time these pointers will be set to point to the right function(adresses to the real function called). 
         \item At compile time it is not yet known if the base function is to be called or a derived one implemented  by a class that inherits from the base class.
+        \item  The object of the class containing the virtual function contains a virtual pointer that points to the base address of the virtual table in memory.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Virtual Tables 2} 
+    \begin{itemize}
+        \item Contains the addresses of the methods dynamically bounded.
+        \item Methods calls are performed by fetching the addresses from the table.
+        \item Whenever there is a virtual function call, the v-table is used to resolve to the function address.
+        \item The dispatch table it is the same for all the objects belonging to the same class it is \emph{shared} between them.
+        \item Objects belonging to type-compatible classes (siblings in an inheritance hierarchy) will have dispatch tables with the same \emph{layout}.
+        \item The address of a given method will appear at the same offset for all type-compatible classes.
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Virtual Tables 3} 
+    \begin{itemize}
+        \item Implementation of this method it is not in the standard (C++). 
+        \item Separate Vtable for each class.
+        \item When an object is created at run-time, a pointer is created as a hidden member of this object (usually first member), 
+            pointing to the Vtable of this class(pointing to the base address in memory).
+        \item This pointer increases the size of the class.
     \end{itemize}
 \end{frame}
 
