--- a/src/meta.tex
+++ b/src/meta.tex
@@ -30,9 +30,12 @@
 \AtBeginDocument{
 \setmathfont{New Euler}%
 \fontspec[OpticalSize=15]{New Euler}%
-\setmainfont[ItalicFont={OpenSans Light Italic},BoldFont={OpenSans},BoldItalicFont={OpenSans Italic},Ligatures=TeX]{OpenSans Light}%
-\setsansfont[ItalicFont={OpenSans Light Italic},BoldFont={OpenSans},BoldItalicFont={OpenSans Italic},Ligatures=TeX]{OpenSans Light}%
-\setmonofont[ItalicFont={OpenSans Italic},BoldFont={OpenSans Bold},BoldItalicFont={OpenSans Bold Italic},Ligatures=TeX]{OpenSans}%
+\setmainfont[ItalicFont={OpenSans Light Italic},BoldFont={OpenSans},
+            BoldItalicFont={OpenSans Italic},Ligatures=TeX]{OpenSans Light}%
+\setsansfont[ItalicFont={OpenSans Light Italic},BoldFont={OpenSans},
+            BoldItalicFont={OpenSans Italic},Ligatures=TeX]{OpenSans Light}%
+\setmonofont[ItalicFont={OpenSans Italic},BoldFont={OpenSans Bold},
+            BoldItalicFont={OpenSans Bold Italic},Ligatures=TeX]{OpenSans}%
 \setmathfont[range=\mathup/{latin,Latin,num}]{OpenSans Light}%
 \setmathfont[range=\mathup/{greek,Greek}]{OpenSans Light}%
 \setmathfont[range=\mathbb/{latin,Latin,num}]{OpenSans }%
@@ -73,8 +76,8 @@
 % - Use the \inst command only if there are several affiliations.
 % - Keep it simple, no one is interested in your street address.
 
-\date[June 5, 2014] % (optional, should be abbreviation of conference nam
-{Dublin\ June 5, 2014}
+\date[August 18, 2014] % (optional, should be abbreviation of conference nam
+{Dublin\ August 18, 2014}
 % - Either use conference name or its abbreviation.
 % - Not really informative to the audience, more for people (including
 %   yourself) who are reading the slides online
