more and code for Cpp meta programming

--- a/src/cppmeta.tex
+++ b/src/cppmeta.tex
@@ -1,6 +1,14 @@
 \begin{frame}{C++ Template Meta-programming}
-\begin{itemize}
-\item .
-\end{itemize}
+    \begin{itemize}
+        \item Templates are used by the compiler to create temporary source code
+            \cite{wikiTM}.
+
+        \item This code is merge by the compiler with the rest of the source code
+            and then compiled\cite{wikiTM}.
+
+        \item Compile time execution\cite{wikiTM}.
+
+        \item C++, D, Lisp(kind of)\cite{wikiTM}.
+    \end{itemize}
 \end{frame}
 
