--- a/src/references.tex
+++ b/src/references.tex
@@ -21,6 +21,12 @@
     \newblock{\em http://www.ibm.com/developerworks/library/l-metaprog1/}
 
   \setbeamertemplate{bibliography item}[online]
+  \bibitem{wikiTM} 
+    Wikipedia.
+    \newblock{\em Template Metaprogramming.}
+    \newblock{\em http://en.wikipedia.org/wiki/Template\_metaprogramming}
+
+  \setbeamertemplate{bibliography item}[online]
   \bibitem{eli} 
     Eli Bendersky 2013.
     \newblock{\em The cost of dynamic(virtual calls) vs. static(CRTP) dispatch in C++.}
