--- a/src/cppmeta.tex
+++ b/src/cppmeta.tex
@@ -12,3 +12,29 @@
     \end{itemize}
 \end{frame}
 
+\begin{frame}{Numeric Computations, Compile Time}
+    \inputminted[mathescape,                                                       
+                    linenos,                                                           
+                    numbersep=5pt,                                                     
+                    frame=lines,                                                       
+                    bgcolor=White,                                                     
+                    fontsize=\scriptsize,                                              
+                    linenos,                                                           
+                    framesep=1.5mm]{c++}                                                 
+                    {/Users/clalanne/GitHubProjects/MetaTalk/src/code/basic.cpp}
+    
+\end{frame}
+
+\begin{frame}{Numeric Computations, Run Time}
+    \inputminted[mathescape,                                                       
+                    linenos,                                                           
+                    numbersep=5pt,                                                     
+                    frame=lines,                                                       
+                    bgcolor=White,                                                     
+                    fontsize=\scriptsize,                                              
+                    linenos,                                                           
+                    framesep=1.5mm]{c++}                                                 
+                    {/Users/clalanne/GitHubProjects/MetaTalk/src/code/basic_runtime.cpp}
+    
+\end{frame}
+
