--- a/src/cppmeta.tex
+++ b/src/cppmeta.tex
@@ -14,27 +14,38 @@
 
 \begin{frame}{Numeric Computations, Compile Time}
     \inputminted[mathescape,                                                       
-                    linenos,                                                           
-                    numbersep=5pt,                                                     
-                    frame=lines,                                                       
-                    bgcolor=White,                                                     
-                    fontsize=\scriptsize,                                              
-                    linenos,                                                           
-                    framesep=1.5mm]{c++}                                                 
-                    {/Users/clalanne/GitHubProjects/MetaTalk/src/code/basic.cpp}
-    
+            linenos,                                                           
+            numbersep=5pt,                                                     
+            frame=lines,                                                       
+            bgcolor=White,                                                     
+            fontsize=\scriptsize,                                              
+            linenos,                                                           
+            framesep=1.5mm]{c++}                                                 
+            {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/basic.cpp}
 \end{frame}
 
 \begin{frame}{Numeric Computations, Run Time}
     \inputminted[mathescape,                                                       
-                    linenos,                                                           
-                    numbersep=5pt,                                                     
-                    frame=lines,                                                       
-                    bgcolor=White,                                                     
-                    fontsize=\scriptsize,                                              
-                    linenos,                                                           
-                    framesep=1.5mm]{c++}                                                 
-                    {/Users/clalanne/GitHubProjects/MetaTalk/src/code/basic_runtime.cpp}
-    
+    linenos,                                                           
+    numbersep=5pt,                                                     
+    frame=lines,                                                       
+    bgcolor=White,                                                     
+    fontsize=\scriptsize,                                              
+    linenos,                                                           
+    framesep=1.5mm]{c++}                                                 
+    {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/basic_runtime.cpp}
 \end{frame}
+
+\begin{frame}{Type Computations}
+    \begin{itemize}
+        \item This is what has made template metaprogramming in C++ so popular
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{Benefits and Drawbacks}
+\end{frame}
+
+
+
+
 
