ending macros min case

--- a/src/macros.tex
+++ b/src/macros.tex
@@ -83,6 +83,54 @@
            {/Users/lalanne/MyCode/GitHubProjects/MP_Talk/macro_min.cpp} 
 \end{frame}
 
+\begin{frame}[fragile]{C preprocessor MIN}
+\inputminted[mathescape,
+   linenos,
+   numbersep=5pt,
+   frame=lines,
+   bgcolor=White,
+   fontsize=\scriptsize,
+   linenos,
+   framesep=2mm]{c++}
+   {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/macro_min_fail.cpp} 
+\end{frame}
+
+\begin{frame}[fragile]{C preprocessor MIN}
+\inputminted[mathescape,
+   linenos,
+   numbersep=5pt,
+   frame=lines,
+   bgcolor=White,
+   fontsize=\scriptsize,
+   linenos,
+   framesep=2mm]{c++}
+   {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/macro_min_should.cpp} 
+\end{frame}
+
+\begin{frame}[fragile]{C preprocessor MIN}
+\inputminted[mathescape,
+   linenos,
+   numbersep=5pt,
+   frame=lines,
+   bgcolor=White,
+   fontsize=\scriptsize,
+   linenos,
+   framesep=2mm]{c++}
+   {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/macro_min_res.cpp} 
+\end{frame}
+
+\begin{frame}[fragile]{C preprocessor MIN}
+\inputminted[mathescape,
+   linenos,
+   numbersep=5pt,
+   frame=lines,
+   bgcolor=White,
+   fontsize=\scriptsize,
+   linenos,
+   framesep=2mm]{c++}
+   {/Users/lalanne/MyCode/GitHubProjects/MetaTalk/src/code/macro_min_ext.cpp} 
+\end{frame}
+
 \begin{frame}{The MIN case}
     \begin{itemize}\addtolength{\itemsep}{2\baselineskip}
         \item Necessary parenthesis (operator precedence), what happen if you 
